Implemented firebase authentication

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,10 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	padding: 20px 40px;
 }
+
+.welcome-message {
+	display: block;
+	width: 100%;
+	text-align: center;
+	margin: 1rem 0;
+}
