--- a/src/components/sign-in/sign-in.style.scss
+++ b/src/components/sign-in/sign-in.style.scss
@@ -1,7 +1,6 @@
 .sign-in {
-	width: 30vw;
-	display: flex;
-	flex-direction: column;
+	flex: 1;
+	margin: 1rem 2rem;
 	span {
 		margin: 10px 0;
 	}
